mysql thread-safe

--- a/trunk/Makefile.in
+++ b/trunk/Makefile.in
@@ -192,7 +192,7 @@ pools: $(srcexm)/pools.cpp libnanosoft.a
 	$(CXX) $(srcexm)/pools.cpp -lnanosoft -o pools
 
 mysql: $(srcexm)/mysql.cpp libnanosoft.a
-	$(CXX) $(srcexm)/mysql.cpp -lnanosoft $(LDFLAGS) $(LIBS) -o mysql
+	$(CXX) $(srcexm)/mysql.cpp -lnanosoft -lpthread $(LDFLAGS) $(LIBS) -o mysql
 
 # LIBRARY
 
