+ поддержка openssl (начало)

--- a/trunk/src/include/nanosoft/config.h.in
+++ b/trunk/src/include/nanosoft/config.h.in
@@ -43,6 +43,11 @@
 */
 #undef HAVE_LIBSSL
 
+/**
+* Поддержка openssl сконфигурирована?
+*/
+#undef HAVE_LIBCRYPTO
+
 ///////////////////////////////////////////////////////////////////////////
 
 #ifdef WINDOWS
