fix GnuSASL support

--- a/trunk/src/include/nanosoft/config.h.in
+++ b/trunk/src/include/nanosoft/config.h.in
@@ -43,6 +43,11 @@
 */
 #undef HAVE_GNUTLS
 
+/**
+* Поддержка GNU SASL library
+*/
+#undef HAVE_GSASL
+
 ///////////////////////////////////////////////////////////////////////////
 
 #ifdef WINDOWS
