+ pigro2 - usb-версия

--- a/pigro/Makefile
+++ b/pigro/Makefile
@@ -1,3 +1,11 @@
 
+all: pigro pigro2
+
 pigro: main.c
 	gcc main.c -o pigro -lbcm2835
+
+pigro2: main2.c
+	gcc main2.c -o pigro2
+
+clean:
+	rm -rf pigro pigro2
