+ код прошивки для программатора pigro2 (usb-версия)

--- a/avr/Makefile
+++ b/avr/Makefile
@@ -2,11 +2,13 @@
 all:
 	make -C example
 	make -C example_cpp
+	make -C pigro_avr
 	make -C trunk
 
 clean:
 	make -C example clean
 	make -C example_cpp clean
+	make -C pigro_avr clean
 	make -C trunk clean
 
 
