--- a/avr/trunk/Makefile
+++ b/avr/trunk/Makefile
@@ -19,24 +19,24 @@ test.o: main.o libnano.a iom16a_usart.o iom16a_spi.o
 	$(GCC) $(LD_OPTS) main.o iom16a_usart.o iom16a_spi.o -o test.o -Wl,-L=. -lnano
 	$(OBJDUMP) -d test.o > test.dump
 
-main.o: main.c pictl.h timers.h iom16a_usart.h iom16a_spi.h
-	$(GCC) $(CC_OPTS) $(ASM_LIST)=main.s -O2 -c main.c -o main.o
+main.o: main.cpp pictl.h timers.h iom16a_usart.h iom16a_spi.h
+	$(GCC) $(CC_OPTS) $(ASM_LIST)=main.s -O2 -c main.cpp -o main.o
 	$(OBJDUMP) -d main.o > main.dump
 
 libnano.a: pictl.o http.o
 	$(AR) rcs libnano.a pictl.o http.o
 
-pictl.o: pictl.c pictl.h
-	$(GCC) $(CC_OPTS) $(ASM_LIST)=pictl.s -O2 -c pictl.c -o pictl.o
+pictl.o: pictl.cpp pictl.h
+	$(GCC) $(CC_OPTS) $(ASM_LIST)=pictl.s -O2 -c pictl.cpp -o pictl.o
 
-http.o: http.c http.h
-	$(GCC) $(CC_OPTS) $(ASM_LIST)=http.s -O2 -c http.c -o http.o
+http.o: http.cpp http.h
+	$(GCC) $(CC_OPTS) $(ASM_LIST)=http.s -O2 -c http.cpp -o http.o
 
-iom16a_usart.o: iom16a_usart.c iom16a_usart.h
-	$(GCC) $(CC_OPTS) $(ASM_LIST)=iom16a_usart.s -O2 -c iom16a_usart.c -o iom16a_usart.o
+iom16a_usart.o: iom16a_usart.cpp iom16a_usart.h
+	$(GCC) $(CC_OPTS) $(ASM_LIST)=iom16a_usart.s -O2 -c iom16a_usart.cpp -o iom16a_usart.o
 
-iom16a_spi.o: iom16a_spi.c iom16a_spi.h
-	$(GCC) $(CC_OPTS) $(ASM_LIST)=iom16a_spi.s -O2 -c iom16a_spi.c -o iom16a_spi.o
+iom16a_spi.o: iom16a_spi.cpp iom16a_spi.h
+	$(GCC) $(CC_OPTS) $(ASM_LIST)=iom16a_spi.s -O2 -c iom16a_spi.cpp -o iom16a_spi.o
 
 clean:
 	rm -rfv *.o *.s *.a *.dump *.hex
