--- a/ffcairo/configure.in
+++ b/ffcairo/configure.in
@@ -4,7 +4,7 @@ AC_INIT(ffcairo, 0.1)
 
 # указываем ожидаемый путь к любому файлу-исходнику, дабы configure
 # мог убедиться что исходники лежат на своем месте
-AC_CONFIG_SRCDIR([src/main.cpp])
+AC_CONFIG_SRCDIR([ffcairo/config.h.in])
 
 # каталог со вспомогательными утилитами, нужно для configure
 # где их брать непонятно... магия... где-то в анналах automake
@@ -20,7 +20,7 @@ AC_CONFIG_AUX_DIR(config)
 # Файл генерируется на основе шаблона, если он не указан в команде, то
 # к имени файла прибавляется .in - было config.h, станет config.h.in,
 # так что после этого править надо *.in файл
-AC_CONFIG_HEADER([src/config.h])
+AC_CONFIG_HEADER([ffcairo/config.h])
 
 # опредяляем архитектуры, где компилируем, на чем компилируем
 # и целевую архитектуру (последнее значимо только для компиляции компиляторов)
